Update about-us.html with revised hospital information

--- a/about-us.html
+++ b/about-us.html
@@ -168,13 +168,14 @@
   
       <!-- Intro Paragraphs -->
       <div class="space-y-4 text-gray-700 leading-relaxed text-justify" data-aos="fade-up" data-aos-delay="100">
-        <p>The Metro Vigan Hospital (MVH) is a level-2 hospital that is conveniently located at the heart of Metro Vigan– in the municipality of Bantay, province of Ilocos Sur. It is easily accessible to public transportation and is only two hundred meters away from the Bantay national highway.</p>
-        <p>It was initiated by a group of physicians in 1997 and in that same year, was registered under the Cooperative Development Authority as Metro Vigan Cooperative Hospital.</p>
-        <p>Since then, MVH has become one of Ilocos Sur’s premiere hospitals, committed to the pursuit of rendering quality and safe medical care to its patient clientele. A Multidisciplinary Team approach in dealing with its patient clientele has been adopted by Metro Vigan Hospital to provide a complete and holistic specialized care.</p>
-        <p>It is equipped with modern diagnostic equipment's and therapeutic modalities needed to surmount the onslaught and the debilitating effects of various medical and surgical illnesses that have beset mankind since the early ages. It has a full complement of well-trained and highly qualified medical specialists.</p>
-        <p>At present, MVH is continually upgrading its equipment, facilities and systems to meet the growing needs of the community. To realize this, MVH is investing in its human capital resources.</p>
-        <p>Aside from providing medical services, the Metro Vigan Hospital also provides the training ground of future Nurses, Pharmacists, Physical therapists, and other allied Health services.</p>
-        <p class="text-gray-700 leading-relaxed">Metro Vigan Hospital is a 61-bed, <span class="font-bold text-green-700 text-normal underline underline-offset-4">Level 2 Hospital</span> with major clinical departments namely: Surgery, Medicine, Pediatrics, and Obstetrics and Gynecology, Anesthesia, and ancillary services namely: Radiology, Clinical and Anatomic Pathology, Dental Medicine, Rehabilitation Medicine, Pharmacy, and Dietary.</p>  
+        
+<p>The Metro Vigan Hospital (MVH) is a Level 2 hospital that is conveniently located at the heart of Metro Vigan– in the municipality of Bantay, province of Ilocos Sur. It is easily accessible to public transportation and is only two hundred meters away from the Bantay national highway.
+It was initiated by a group of physicians in 1997 and in that same year, was registered under the Cooperative Development Authority as Metro Vigan Cooperative Hospital.
+Since then, MVH has become one of Ilocos Sur’s premiere hospitals, committed to the pursuit of rendering quality and safe medical care to its patient clientele. A Multidisciplinary Team approach in dealing with its patient clientele has been adopted by Metro Vigan Hospital to provide a complete and holistic specialized care.
+It is equipped with modern diagnostic facilities and therapeutic modalities needed to surmount the onslaught and debilitating effects of various medical and surgical illnesses that have beset mankind. It has a full complement of well-trained and highly qualified medical specialists.
+At present, MVH is continually upgrading its equipment, facilities and systems to meet the growing needs of the community. To realize this, MVH is investing in its human capital resources.
+Aside from providing medical services, the Metro Vigan Hospital also provides the training ground of future Nurses, Pharmacists, Physical therapists, and other allied Health services.
+Metro Vigan Hospital is an 80-bed, Level 2 Hospital with major clinical departments namely: Surgery, Medicine, Pediatrics, and Obstetrics and Gynecology, Anesthesia, and ancillary services namely: Radiology, Clinical and Anatomic Pathology, Dental Medicine, Rehabilitation Medicine, Pharmacy, and Dietary.</p>  
       </div>
         
     </div>
