--- a/careers.html
+++ b/careers.html
@@ -268,6 +268,20 @@
 
       <!-- Job Card -->
       <div class="bg-white shadow-md rounded-lg p-6 hover:shadow-lg transition">
+        <h3 class="text-xl font-semibold text-green-700">Dietician</h3>
+        <p class="text-gray-600 mt-2 text-sm">Department: Dietary</p>
+        <p class="text-gray-600 text-sm mb-4">Openings: <strong>1</strong></p>
+        <p class="mt-4 text-gray-700 text-sm">
+          Plans and supervises food service operations to ensure nutritional standards are met.
+        </p>
+        <a href="mailto:careers@metroviganhospital.com?cc=humanresource@metroviganhospital.com"
+           class="mt-4 inline-block bg-[#04813b] text-white px-5 py-2 rounded-md hover:bg-[#16a94c] transition">
+          Apply Now
+        </a>
+      </div>
+
+      <!-- Job Card -->
+      <div class="bg-white shadow-md rounded-lg p-6 hover:shadow-lg transition">
         <h3 class="text-xl font-semibold text-green-700">Radiologic Technologist</h3>
         <p class="text-gray-600 mt-2 text-sm">Department: Radiology</p>
         <p class="text-gray-600 text-sm mb-4">Openings: <strong>3</strong></p>
@@ -280,7 +294,7 @@
         </a>
       </div>
 
-      <!-- Job Card -->
+      <!-- Job Card 
       <div class="bg-white shadow-md rounded-lg p-6 hover:shadow-lg transition">
         <h3 class="text-xl font-semibold text-green-700">Staff Nurse</h3>
         <p class="text-gray-600 mt-2 text-sm">Department: Nursing Service</p>
@@ -292,13 +306,13 @@
            class="mt-4 inline-block bg-[#04813b] text-white px-5 py-2 rounded-md hover:bg-[#16a94c] transition">
           Apply Now
         </a>
-      </div>
+      </div>-->
 
       <!-- Job Card -->
       <div class="bg-white shadow-md rounded-lg p-6 hover:shadow-lg transition">
         <h3 class="text-xl font-semibold text-green-700">Pharmacist</h3>
         <p class="text-gray-600 mt-2 text-sm">Department: Pharmacy</p>
-        <p class="text-gray-600 text-sm mb-4">Openings: <strong>2</strong></p>
+        <p class="text-gray-600 text-sm mb-4">Openings: <strong>3</strong></p>
         <p class="mt-4 text-gray-700 text-sm">
           Dispense medications, counsel patients, and manage pharmacy operations.
         </p>
@@ -308,7 +322,7 @@
         </a>
       </div>
 
-      <!-- Job Card -->
+      <!-- Job Card 
       <div class="bg-white shadow-md rounded-lg p-6 hover:shadow-lg transition">
         <h3 class="text-xl font-semibold text-green-700">Medical Technologist</h3>
         <p class="text-gray-600 mt-2 text-sm">Department: Laboratory</p>
@@ -320,7 +334,7 @@
            class="mt-4 inline-block bg-[#04813b] text-white px-5 py-2 rounded-md hover:bg-[#16a94c] transition">
           Apply Now
         </a>
-      </div>
+      </div>-->
 
       <!-- Job Card
       <div class="bg-white shadow-md rounded-lg p-6 hover:shadow-lg transition">
