--- a/index.html
+++ b/index.html
@@ -822,24 +822,38 @@
       <div class="grid gap-8 sm:grid-cols-2 md:grid-cols-3" data-aos="fade-up" data-aos-delay="300">
         
         <!-- Job Card -->
-        <div class="bg-white shadow-md rounded-lg p-6 hover:shadow-lg transition">
-          <h3 class="text-xl font-semibold text-green-700">Radiologic Technologist</h3>
-          <p class="text-gray-600 mt-2 text-sm">Department: Radiology</p>
-          <p class="text-gray-600 text-sm mb-4">Openings: <strong>3</strong></p>
-          <p class="mt-4 text-gray-700 text-sm">
-            Operates imaging equipment to capture diagnostic images for medical evaluation.
-          </p>
-          <a href="mailto:careers@metroviganhospital.com?cc=humanresource@metroviganhospital.com"
-            class="mt-4 inline-block bg-[#04813b] text-white px-5 py-2 rounded-md hover:bg-[#16a94c] transition">
-            Apply Now
-          </a>
-        </div>
+      <div class="bg-white shadow-md rounded-lg p-6 hover:shadow-lg transition">
+        <h3 class="text-xl font-semibold text-green-700">Dietician</h3>
+        <p class="text-gray-600 mt-2 text-sm">Department: Dietary</p>
+        <p class="text-gray-600 text-sm mb-4">Openings: <strong>1</strong></p>
+        <p class="mt-4 text-gray-700 text-sm">
+          Plans and supervises food service operations to ensure nutritional standards are met.
+        </p>
+        <a href="mailto:careers@metroviganhospital.com?cc=humanresource@metroviganhospital.com"
+           class="mt-4 inline-block bg-[#04813b] text-white px-5 py-2 rounded-md hover:bg-[#16a94c] transition">
+          Apply Now
+        </a>
+      </div>
+
+      <!-- Job Card -->
+      <div class="bg-white shadow-md rounded-lg p-6 hover:shadow-lg transition">
+        <h3 class="text-xl font-semibold text-green-700">Radiologic Technologist</h3>
+        <p class="text-gray-600 mt-2 text-sm">Department: Radiology</p>
+        <p class="text-gray-600 text-sm mb-4">Openings: <strong>3</strong></p>
+        <p class="mt-4 text-gray-700 text-sm">
+          Operates imaging equipment to capture diagnostic images for medical evaluation.
+        </p>
+        <a href="mailto:careers@metroviganhospital.com?cc=humanresource@metroviganhospital.com"
+           class="mt-4 inline-block bg-[#04813b] text-white px-5 py-2 rounded-md hover:bg-[#16a94c] transition">
+          Apply Now
+        </a>
+      </div>
 
         <!-- Another Job -->
         <div class="bg-white shadow-md rounded-lg p-6 hover:shadow-lg transition">
           <h3 class="text-xl font-semibold text-green-700">Pharmacist</h3>
           <p class="text-gray-600 mt-2 text-sm">Department: Pharmacy</p>
-          <p class="text-gray-600 text-sm mb-4">Openings: <strong>2</strong></p>
+          <p class="text-gray-600 text-sm mb-4">Openings: <strong>3</strong></p>
           <p class="mt-4 text-gray-700 text-sm">
             Hiring: Registered Pharmacist. Join our MVH pharmacy team. Apply now! #RPh #Hiring
           </p>
@@ -849,21 +863,6 @@
           </a>
         </div>
 
-        <!-- Another Job -->
-        <div class="bg-white shadow-md rounded-lg p-6 hover:shadow-lg transition">
-          <h3 class="text-xl font-semibold text-green-700">Staff Nurse</h3>
-          <p class="text-gray-600 mt-2 text-sm">Department: Nursing Department</p>
-          <p class="text-gray-600 text-sm mb-4">Openings: <strong>3</strong></p>
-          <p class="mt-4 text-gray-700 text-sm">
-            Provide high-quality patient care in a dynamic hospital environment. Join our team!
-          </p>
-          <a href="mailto:careers@metroviganhospital.com?cc=humanresource@metroviganhospital.com"
-            class="mt-4 inline-block bg-[#04813b] text-white px-5 py-2 rounded-md hover:bg-[#16a94c] transition">
-            Apply Now
-          </a>
-        </div>
-
-        
       </div>
 
       <!-- More Jobs Button -->
