update new consultants

--- a/index.html
+++ b/index.html
@@ -672,128 +672,65 @@
       <div class="mt-12 grid gap-8 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
         <!-- Doctor Card Template -->
         
-        <!-- Doctor 8 -->
+        
+        <!-- Doctor 1 -->
         <div class="bg-gray-50 shadow-md rounded-xl hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="550">
           <div class="p-6 text-center">
-                  <img src="img/doctors/dr_john_quadra.avif" fetchpriority="low" loading="lazy" alt="Dr. Sofia Lim" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
+                  <img src="img/doctors/dr_edmund_edrozo.avif" fetchpriority="low" loading="lazy" alt="Dr. Sofia Lim" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
                   <!-- Doctor Info -->
-                  <h3 class="text-md font-semibold text-black font-roboto mb-2">Dr. John Christopher Quadra</h3>
-                  <p class="text-md text-[#249f51] font-medium">Internal Medicine</p>
-                  <p class="text-md text-[#249f51] font-medium mb-3">Adult Pulmonary Medicine</p> 
+                  <h3 class="text-md font-semibold text-black font-roboto mb-2">Dr. Edmund S. Edrozo, Jr.</h3>
+                  <p class="text-md text-[#249f51] font-medium">Internal Medicine - Oncology</p> 
           </div>
         </div>
 
-        <!-- Doctor 8 -->
+        <!-- Doctor 1 -->
         <div class="bg-gray-50 shadow-md rounded-xl hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="550">
           <div class="p-6 text-center">
-            <img src="img/doctors/dr_dianne_millado-riambon.avif" fetchpriority="low" loading="lazy" alt="Dr. Dianne Riambon" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
-            <!-- Doctor Info -->
-            <h3 class="text-md font-semibold text-black font-roboto mb-2">Dr. Dianne Millado-Riambon</h3>
-            <p class="text-md text-[#249f51] font-medium">Pediatric Pulmonary & Critical Care Medicine Specialist</p>
-            <p class="text-md text-[#249f51] font-medium mb-3">Pediatric Pulmonary Rehabilitation Specialist</p>
-          </div>
-        </div>
-
-        <!-- Doctor 8 -->
-        <div class="bg-gray-50 shadow-md rounded-xl hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="550">
-          <div class="p-6 text-center">
-                  <img src="img/doctors/dr_nijell_bangasan-pizarro.avif" fetchpriority="low" loading="lazy" alt="Dr. Nijell Pizarro" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
+                  <img src="img/doctors/dr_marizar_pelayo-pundan.avif" fetchpriority="low" loading="lazy" alt="Dr. Sofia Lim" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
                   <!-- Doctor Info -->
-                  <h3 class="text-lg font-semibold text-black font-roboto mb-2">Dr. Nijell Bangasan-Pizarro</h3>
-                  <p class="text-md text-[#249f51] font-medium mb-3">Internal Medicine</p>
+                  <h3 class="text-md font-semibold text-black font-roboto mb-2">Dr. Marizar R. Pelayo-Pundan</h3>
+                  <p class="text-md text-[#249f51] font-medium">General Pediatrician</p>
+
           </div>
         </div>
 
-        <!-- Doctor 8 -->
+        <!-- Doctor 1 -->
         <div class="bg-gray-50 shadow-md rounded-xl hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="550">
           <div class="p-6 text-center">
-            <img src="img/doctors/dr_jonas_cauton.avif" fetchpriority="low" loading="lazy" alt="Dr. Jonas Claro Cauton" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
-            <!-- Doctor Info -->
-            <h3 class="text-xl font-semibold text-black font-roboto mb-2">Dr. Jonas Claro Cauton</h3>
-            <p class="text-md text-[#249f51] font-medium mb-3">Rehabilitation Medicine</p> 
-          </div>
-        </div>
-
-        <!-- Doctor 8 -->
-        <div class="bg-gray-50 shadow-md rounded-xl hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="550">
-          <div class="p-6 text-center">
-                  <img src="img/doctors/dr_miguel_galut.avif" fetchpriority="low" loading="lazy" alt="Dr. Miko Galut" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
+                  <img src="img/doctors/dr_isabella_panelo.avif" fetchpriority="low" loading="lazy" alt="Dr. Sofia Lim" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
                   <!-- Doctor Info -->
-                  <h3 class="text-xl font-semibold text-black font-roboto mb-2">Dr. Miko Galut</h3>
-                  <p class="text-md text-[#249f51] font-medium mb-3">Urologic Surgery</p> 
+                  <h3 class="text-md font-semibold text-black font-roboto mb-2">Dr. Isabella R. Panelo</h3>
+                  <p class="text-md text-[#249f51] font-medium">Nephrology</p>
           </div>
         </div>
 
-        <!-- Doctor 8 -->
-        <div class="bg-gray-50 shadow-md rounded-xl hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="550">
+         <!-- Doctor 1 -->
+         <div class="bg-gray-50 shadow-md rounded-xl hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="550">
           <div class="p-6 text-center">
-            <img src="img/doctors/dr_frances_obrero-artajos.avif" fetchpriority="low" loading="lazy"  alt="Dr. Frances Obrero-Artajos" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
-            <!-- Doctor Info -->
-            <h3 class="text-lg font-semibold text-black font-roboto mb-2">Dr. Frances Obrero-Artajos</h3>
-            <p class="text-md text-[#249f51] font-medium">Internal Medicine</p>
-            <p class="text-md text-[#249f51] font-medium mb-3">Endocrinology, Diabetes & Metabolism</p>
-          </div>
-        </div>
-
-        <!-- Doctor 8 -->
-        <div class="bg-gray-50 shadow-md rounded-xl hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="550">
-          <div class="p-6 text-center">
-                  <img src="img/doctors/dr_margarita_cobangco.avif" fetchpriority="low" loading="lazy"  alt="Dr. Margarita Cobangco" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
+                  <img src="img/doctors/dr_karla_albano-antiporda.avif" fetchpriority="low" loading="lazy" alt="Dr. Sofia Lim" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
                   <!-- Doctor Info -->
-                  <h3 class="text-xl font-semibold text-black font-roboto mb-2">Dr. Margarita Cobangco</h3>
-                  <p class="text-md text-[#249f51] font-medium mb-3">General Surgery</p>
+                  <h3 class="text-md font-semibold text-black font-roboto mb-2">Dr. Karla Modesta C. Albano-Antiporda</h3>
+                  <p class="text-md text-[#249f51] font-medium">Pediatric Endocrinology</p>
           </div>
         </div>
 
-        <!-- Doctor 8 -->
-        <div class="bg-gray-50 shadow-md rounded-xl hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="550">
+         <!-- Doctor 1 -->
+         <div class="bg-gray-50 shadow-md rounded-xl hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="550">
           <div class="p-6 text-center">
-            <img src="img/doctors/dr_benjamin_tolentino.avif" fetchpriority="low" loading="lazy"  alt="Dr. Benjamin Tolentino III" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
-            <!-- Doctor Info -->
-            <h3 class="text-lg font-semibold text-black font-roboto mb-2">Dr. Benjamin Tolentino III</h3>
-            <p class="text-md text-[#249f51] font-medium mb-3">General Surgery</p>
+                  <img src="img/doctors/dr_donnel_rubio.avif" fetchpriority="low" loading="lazy" alt="Dr. Sofia Lim" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
+                  <!-- Doctor Info -->
+                  <h3 class="text-md font-semibold text-black font-roboto mb-2">Dr. Donnel Guenter T. Rubio</h3>
+                  <p class="text-md text-[#249f51] font-medium">Urologic Oncology</p>
           </div>
         </div>
 
-        <!-- Doctor 8 -->
+        <!-- Doctor 1 -->
         <div class="bg-gray-50 shadow-md rounded-xl hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="550">
           <div class="p-6 text-center">
-            <img src="img/doctors/dr_jonah_toribio.avif" fetchpriority="low" loading="lazy" alt="Dr. Jonah Lyn" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
-            <!-- Doctor Info -->
-            <h3 class="text-lg font-semibold text-black font-roboto mb-2">Dr. Jonah Lyn Toribio</h3>
-            <p class="text-md text-[#249f51] font-medium mb-3">General Surgery</p> 
-          </div>
-        </div>
-
-        <!-- Doctor 8 -->
-        <div class="bg-gray-50 shadow-md rounded-xl hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="550">
-          <div class="p-6 text-center">
-            <img src="img/doctors/dr_xyrose_andres.avif" fetchpriority="low" loading="lazy"  alt="Dr. Xyrose Lex-Deo Andres" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
-            <!-- Doctor Info -->
-            <h3 class="text-lg font-semibold text-black font-roboto mb-2">Dr. Xyrose Lex-Deo Andres</h3>
-            <p class="text-md text-[#249f51] font-medium">Ear, Nose, Throat</p>
-            <p class="text-md text-[#249f51] font-medium mb-3">Head & Neck Surgery</p>
-          </div>
-        </div>
-
-        <!-- Doctor 8 -->
-        <div class="bg-gray-50 shadow-md rounded-xl hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="550">
-          <div class="p-6 text-center">
-            <img src="img/doctors/dr_domingo_cuanang.avif" fetchpriority="low" loading="lazy"  alt="Dr. Dr. Domingo Cuanang III" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
-            <!-- Doctor Info -->
-            <h3 class="text-lg font-semibold text-black font-roboto mb-2">Dr. Domingo Cuanang III</h3>
-            <p class="text-md text-[#249f51] font-medium mb-3">Radiation Oncology</p>
-          </div>
-        </div>
-
-        <!-- Doctor 8 -->
-        <div class="bg-gray-50 shadow-md rounded-xl hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="550">
-          <div class="p-6 text-center">
-            <img src="img/doctors/dr_marvin_riambon.avif" fetchpriority="low" loading="lazy"  alt="Dr. Marvin Riambon" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
-            <!-- Doctor Info -->
-            <h3 class="text-lg font-semibold text-black font-roboto mb-2">Dr. Marvin M. Riambon</h3>
-            <p class="text-md text-[#249f51] font-medium">Internal Medicine</p>
-            <p class="text-md text-[#249f51] font-medium mb-3">Adult Cardiology</p>
+                  <img src="img/doctors/dr_lina_pipo.avif" fetchpriority="low" loading="lazy" alt="Dr. Sofia Lim" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
+                  <!-- Doctor Info -->
+                  <h3 class="text-md font-semibold text-black font-roboto mb-2">Dr. Lina Flavia R. Pipo</h3>
+                  <p class="text-md text-[#249f51] font-medium">Radiology</p>
           </div>
         </div>
 
